lkj;kjl;jlkkjljkl;

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ notification.mp3
 /.vs/stable-diffusion-webui/FileContentIndex/read.lock
 /.vs/stable-diffusion-webui/FileContentIndex/1e9891a6-abdb-4a1d-ad25-38b4e6ce33e8.vsidx
 /.vs/slnx.sqlite
+/.vs/stable-diffusion-webui/FileContentIndex/1e224288-2ca3-4fcb-8ddc-72391afd5583.vsidx
