--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ notification.mp3
 /.vs/stable-diffusion-webui/FileContentIndex/1e9891a6-abdb-4a1d-ad25-38b4e6ce33e8.vsidx
 /.vs/slnx.sqlite
 /.vs/stable-diffusion-webui/FileContentIndex/1e224288-2ca3-4fcb-8ddc-72391afd5583.vsidx
+/.vs/stable-diffusion-webui/FileContentIndex/5fcc4d43-9964-4c6a-be75-6bdfe3f462ba.vsidx
