--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ notification.mp3
 /.vs/stable-diffusion-webui/FileContentIndex/1e224288-2ca3-4fcb-8ddc-72391afd5583.vsidx
 /.vs/stable-diffusion-webui/FileContentIndex/5fcc4d43-9964-4c6a-be75-6bdfe3f462ba.vsidx
 /.vs/stable-diffusion-webui/FileContentIndex/4074de23-f42e-4e6f-a746-7b55adeae910.vsidx
+/.vs/stable-diffusion-webui/FileContentIndex
